Next release:

	* Updated for compatibility with new library API. Reworked rendering engine to make use of library internal MIDI event queue.
	* Removed sysex length limit set in the internal MIDI player and converter.
	* Improved ClockSync class for providing better timing accuracy yet being more robust.
	* Improved timing accuracy in the "advanced timing" mode.
	* Improved QtAudioDriver. Fixed sound dropouts which may occur when using GUI.
	* MIDI player now sends "Reset all controllers" MIDI events when it stops playing.
	* MIDI file converter now removes leading silence. MIDI conversion dialog now guesses PCM output file name if the user adds MIDI file first.
	* Eliminated application hangs on Windows when the application is closed enforcedly,
	  e.g. when the user closes the application console or shuts down the system.
	* Fixed deadlock which may happen when the user quickly pushes "Play" button in the MIDI player.
	* Improved ROM configuration. Added support for default ROM search path which is a directory "roms" located
	  in the current user home directory.
	* Reworked synth visualisation in order to make our LCD model close the hardware behaviour.
	  Added emulation of the "MIDI MESSAGE" led.
	* Fixed display of timbre names which contain null characters.
	* MIDI files can now be dropped to main window and MIDI file converter dialog.
	* Main window now restores its geometry when the application starts. Fixed main window geometry when synth details panel changes visibility.
	* Overall UI layout made more compact. Other UI improvements.
	* Improved build under POSIX environment.
	* ALSA driver can now open "sysdefault" device in order to easily bypass Pulse-ALSA plugin. It can also open "plug:hw" device in exclusive mode
	  to achieve minimal latency.
	* Code refactoring.

2013-03-24:

	1.0.2 released.

	* Updated mt32emu library to version 1.2.0.

2013-02-11:

	1.0.1 released.

	* Updated mt32emu library to version 1.1.1.

2012-12-25:

	1.0.0 released.
